crates/squealy/tests/compile_fail/row_lock_rejected_with_distinct.stderr
error[E0277]: the trait bound `RowLocked: squealy::RowLockSelectValid<IsDistinct, Ungrouped, _>` is not satisfied
  --> tests/compile_fail/row_lock_rejected_with_distinct.rs:18:10
   |
18 |         .select(|(job,)| job.id);
   |          ^^^^^^ the trait `squealy::RowLockSelectValid<IsDistinct, Ungrouped, _>` is not implemented for `RowLocked`
   |
help: the trait `RowLockSelectValid<IsDistinct, Ungrouped, _>` is not implemented for `RowLocked`
      but trait `RowLockSelectValid<NotDistinct, Ungrouped, _>` is implemented for it
  --> src/expr.rs
   |
   | / impl<Projection> RowLockSelectValid<NotDistinct, Ungrouped, Projection> for RowLocked where
   | |     Projection: ProjectionClass<Class = ScalarProjection>
   | |_________________________________________________________^
   = help: for that trait implementation, expected `NotDistinct`, found `IsDistinct`
note: the method call chain might not have had the expected associated types
  --> tests/compile_fail/row_lock_rejected_with_distinct.rs:15:10
   |
14 |     let _distinct_then_lock = TestConnection
   |                               -------------- this expression has type `TestConnection`
15 |         .from::<Job>()
   |          ^^^^^^^^^^^^^
   |          |
   |          `SelectAst::RowLockState` is `RowUnlocked` here
   |          `SelectAst::Distinctness` is `NotDistinct` here
   |          `SelectAst::Grouped` is `Ungrouped` here
16 |         .distinct()
   |          ^^^^^^^^^^
   |          |
   |          `SelectAst::RowLockState` remains `RowUnlocked` here
   |          `SelectAst::Distinctness` changed to `IsDistinct` here
   |          `SelectAst::Grouped` remains `Ungrouped` here
17 |         .for_update()
   |          ^^^^^^^^^^^^
   |          |
   |          `SelectAst::RowLockState` changed to `RowLocked` here
   |          `SelectAst::Distinctness` remains `IsDistinct` here
   |          `SelectAst::Grouped` remains `Ungrouped` here
note: required by a bound in `squealy::SourceQuery::select`
  --> src/query.rs
   |
   |       fn select<P, Indices>(
   |          ------ required by a bound in this associated function
...
   |           <Self as SelectAst<'conn, 'scope, Conn>>::RowLockState: crate::RowLockSelectValid<
   |  _________________________________________________________________^
   | |                 <Self as SelectAst<'conn, 'scope, Conn>>::Distinctness,
   | |                 <Self as SelectAst<'conn, 'scope, Conn>>::Grouped,
   | |                 P,
   | |             >,
   | |_____________^ required by this bound in `SourceQuery::select`

error[E0277]: the trait bound `RowLocked: squealy::RowLockSelectValid<IsDistinct, Ungrouped, _>` is not satisfied
  --> tests/compile_fail/row_lock_rejected_with_distinct.rs:24:10
   |
24 |         .select(|(job,)| job.id);
   |          ^^^^^^ the trait `squealy::RowLockSelectValid<IsDistinct, Ungrouped, _>` is not implemented for `RowLocked`
   |
help: the trait `RowLockSelectValid<IsDistinct, Ungrouped, _>` is not implemented for `RowLocked`
      but trait `RowLockSelectValid<NotDistinct, Ungrouped, _>` is implemented for it
  --> src/expr.rs
   |
   | / impl<Projection> RowLockSelectValid<NotDistinct, Ungrouped, Projection> for RowLocked where
   | |     Projection: ProjectionClass<Class = ScalarProjection>
   | |_________________________________________________________^
   = help: for that trait implementation, expected `NotDistinct`, found `IsDistinct`
note: the method call chain might not have had the expected associated types
  --> tests/compile_fail/row_lock_rejected_with_distinct.rs:21:10
   |
20 |     let _lock_then_distinct = TestConnection
   |                               -------------- this expression has type `TestConnection`
21 |         .from::<Job>()
   |          ^^^^^^^^^^^^^
   |          |
   |          `SelectAst::RowLockState` is `RowUnlocked` here
   |          `SelectAst::Distinctness` is `NotDistinct` here
   |          `SelectAst::Grouped` is `Ungrouped` here
22 |         .for_update()
   |          ^^^^^^^^^^^^
   |          |
   |          `SelectAst::RowLockState` changed to `RowLocked` here
   |          `SelectAst::Distinctness` remains `NotDistinct` here
   |          `SelectAst::Grouped` remains `Ungrouped` here
23 |         .distinct()
   |          ^^^^^^^^^^
   |          |
   |          `SelectAst::RowLockState` remains `RowLocked` here
   |          `SelectAst::Distinctness` changed to `IsDistinct` here
   |          `SelectAst::Grouped` remains `Ungrouped` here
note: required by a bound in `squealy::SourceQuery::select`
  --> src/query.rs
   |
   |       fn select<P, Indices>(
   |          ------ required by a bound in this associated function
...
   |           <Self as SelectAst<'conn, 'scope, Conn>>::RowLockState: crate::RowLockSelectValid<
   |  _________________________________________________________________^
   | |                 <Self as SelectAst<'conn, 'scope, Conn>>::Distinctness,
   | |                 <Self as SelectAst<'conn, 'scope, Conn>>::Grouped,
   | |                 P,
   | |             >,
   | |_____________^ required by this bound in `SourceQuery::select`
